# omnitty

./: .gitignore  .gitmodules  CHANGELOG.md  Makefile.in  README  README.md  TODO  configure  configure.ac  curutil.c  curutil.h  help.c  help.h  machine.h  machmgr.h  main.c  make-package.sh  menu.h  minibuf.h  omnitty.1
ide/cmake/: CMakeLists.txt
ide/qmake/: omnitty.pro
ide/xcode/omnitty.xcodeproj/: project.pbxproj
src/: config.cpp  config.h  curutil.cpp  curutil.h  help.cpp  help.h  log.h  machine.cpp  machine.h  machine_manager.cpp  machine_manager.h  machmgr.cpp  machmgr.h  main.cpp  menu.cpp  menu.h  minibuf.c  minibuf.cpp  minibuf.h  omnitty  opt_parser.cpp  opt_parser.h  utils.h  window_manager.cpp  window_manager.h
